  This offers increased performance and removes the select() FDSET size
  limit from imtcp. Note that we fall back to select() if there is no
  epoll netstream drivers. So far, an epoll driver has only been
  implemented for plain tcp syslog, the rest will follow once the code
  proves well in practice AND there is demand.
- bugfix: enabling GSSServer crashes rsyslog startup
  Thanks to Tomas Kubina for the patch [imgssapi]
- bugfix (kind of): check if TCP connection is still alive if using TLS
  Thanks to Jonathan Bond-Caron for the patch.
---------------------------------------------------------------------------
Version 5.5.0  [DEVEL] (rgerhards), 2009-11-18
- moved DNS resolution code out of imudp and into the backend processing
  Most importantly, DNS resolution now never happens if the resolved name
  is not required. Note that this applies to imudp - for the other inputs,
  DNS resolution almost comes for free, so we do not do it there. However,
  the new method has been implemented in a generic way and as such may 
  also be used by other modules in the future.
- added option to use unlimited-size select() calls
  Thanks to varmjofekoj for the patch
  This is not done in imudp, as it natively supports epoll().
- doc: improved description of what loadable modules can do
---------------------------------------------------------------------------
Version 5.3.6  [BETA] (rgerhards), 2009-11-??
- bugfix: omfile output was only written when buffer was full, not at
  end of transaction
- bugfix: commit transaction was not properly conveyed to message layer,
  potentially resulting in non-message destruction and thus hangs
- bugfix: enabling GSSServer crashes rsyslog startup
  Thanks to Tomas Kubina for the patch [imgssapi]
- bugfix (kind of): check if TCP connection is still alive if using TLS
  Thanks to Jonathan Bond-Caron for the patch.
---------------------------------------------------------------------------
Version 5.3.5  [BETA] (rgerhards), 2009-11-13